# csj-recommandations

./: Makefile  README.md
backend/: Cargo.toml  README.md
backend/public/: graphiql.html  index.html
backend/src/: auth.rs  database.rs  errors.rs  main.rs  models.rs
frontend/: .env  .eslintrc.json  package-lock.json  package.json  rollup.config.js
frontend/public/: global.css
frontend/src/: App.svelte  Recommandation.svelte  api.js  apollo.js
frontend/src/components/: Modal.svelte  Recommandation.svelte  RecommandationInput.svelte
