[package]
name = "csj-recommandations-backend"
version = "0.1.0"
authors = ["paullegrand"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = { version = "0.3", default-features = false }
juniper = { version = "0.14.2", git = "https://github.com/graphql-rust/juniper", rev = "c12f40c", default-features = false }
juniper_warp = { version = "0.5.2", git = "https://github.com/graphql-rust/juniper", rev = "c12f40c" }
rusqlite = { version = "0.22", features = ["uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.15"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"], default-features = false }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = { version = "0.2", default-features = false }
